# myTesting

./: .gitignore  README.md
cpp/: CMakeLists.txt  beforeCommit.sh  genXcode.sh  maker.sh
cpp/include/: myTesting
cpp/include/myTesting_bits/: Histogram.hpp  LineChart.hpp  RealFunction.hpp  RealFunction2D.hpp  globalConstants.hpp  mathematics.hpp  standard.hpp  test.hpp  testing.hpp  textFunctions.hpp
cpp/src/: Histogram.cpp  LineChart.cpp  mathematics.cpp  test.cpp  testing.cpp  textFunctions.cpp
cpp/tests/: CMakeLists.txt  beforeCommit.sh  exec.sh  genXCode.sh  maker.sh
cpp/tests/src/: myTesting.cpp
